--- a/examples/rental-helper/pom.xml
+++ b/examples/rental-helper/pom.xml
@@ -34,7 +34,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>com.example.rentalhelper.App</mainClass>
+									<mainClass>com.example.retalhelper.App</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
@@ -58,11 +58,11 @@
 			<artifactId>commons-net</artifactId>
 			<version>3.6</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<!-- https://mvnrepository.com/artifact/org.mongodb.morphia/morphia -->
 		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.8.5</version>
+			<groupId>org.mongodb.morphia</groupId>
+			<artifactId>morphia</artifactId>
+			<version>1.3.2</version>
 		</dependency>
 
 
